--- a/.github/workflows/pr-labeling.yml
+++ b/.github/workflows/pr-labeling.yml
@@ -8,6 +8,10 @@ jobs:
   auto-labeling-pr:
     runs-on: ubuntu-latest
 
+    permissions:
+        issues: write
+        pull-requests: write
+
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
