--- a/.github/workflows/pr-labeling.yml
+++ b/.github/workflows/pr-labeling.yml
@@ -1,4 +1,4 @@
-name: Automatically labeling pull request
+name: Automatically labeling PR
 
 on:
   pull_request:
@@ -18,7 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # ラベル名を取得する
       - name: Get label name
         id: label_name
         run: |
@@ -31,7 +30,6 @@ jobs:
             echo "label_name=" >> $GITHUB_ENV
           fi
 
-      # PRにラベルを付与する
       - name: Auto labeling
         if: ${{ env.label_name }}
         run: |
