--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,7 @@
 name: Create release tag and release note.
 
+run-name: Run By @${{ github.actor}}
+
 on:
   pull_request:
     types: [closed]
@@ -10,9 +12,8 @@ jobs:
   create-release-tag:
     # PRがマージされたときのみ実行
     if: |
-     github.event.pull_request.merged == true &&
-     github.event.pull_request.base.ref != 'stg' &&
-     github.event.pull_request.base.ref != 'prd'
+        github.event.pull_request.merged == true &&
+        github.event.pull_request.head.ref == 'dev'
     runs-on: ubuntu-latest
 
     env:
