--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,13 +84,8 @@ jobs:
         run: |
           response=$(gh api \
             --method POST \
-            -d "{ \
-              \"tag_name\": \"${{ steps.release_tag.outputs.release_tag }}\", \
-              \"target_commitish\": \"main\", \
-              \"name\": \"${{ steps.release_tag.outputs.release_tag }}\", \
-              \"body\": \"${{ steps.release_note_body.outputs.release_note_body }}\" \
-            }" \
-            -w "%{http_code}" \
+            -f tag_name=${{ steps.release_tag.outputs.release_tag }} -f target_commitish=main
+            -f name=${{ steps.release_tag.outputs.release_tag }} -f body=${{ steps.release_note_body.outputs.release_note_body }}
             -o response_body.txt \
             repos/${{ github.repository }}/releases)
             status_code=$(tail -n1 <<< "$response")
