タイトル変更

--- a/.github/workflows/pr-labeling.yml
+++ b/.github/workflows/pr-labeling.yml
@@ -1,6 +1,6 @@
 name: PR Labeler
 
-run-name: ${{ github.event.pull_request.title }} Run By @${{ github.actor}}
+run-name: ${{ github.event.pull_request.title }} / Run By @${{ github.actor}}
 
 on:
   pull_request:
