構文エラーを修正

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,9 +84,8 @@ jobs:
         run: |
           response=$(gh api \
             --method POST \
-            -f tag_name=${{ steps.release_tag.outputs.release_tag }} -f target_commitish=main
-            -f name=${{ steps.release_tag.outputs.release_tag }} -f body=${{ steps.release_note_body.outputs.release_note_body }}
-            -o response_body.txt \
+            -f tag_name=${{ steps.release_tag.outputs.release_tag }} -f target_commitish=main \
+            -f name=${{ steps.release_tag.outputs.release_tag }} -f body=${{ steps.release_note_body.outputs.release_note_body }} \
             repos/${{ github.repository }}/releases)
             status_code=$(tail -n1 <<< "$response")
             echo "Status Code: $status_code"
