条件の追加

--- a/.github/workflows/pr-labeling.yml
+++ b/.github/workflows/pr-labeling.yml
@@ -4,6 +4,10 @@ run-name: ${{ github.event.pull_request.title }} / Run By @${{ github.actor}}
 
 on:
   pull_request:
+    branches-ignore:
+        - main
+        - prd
+        - stg
     types: [opened]
 
 jobs:
