--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,18 +90,9 @@ jobs:
             -f body="${{ steps.release_note_body.outputs.release_note_body }}" \
             /repos/${{ github.repository }}/releases)
 
-            status_code=$(tail -n1 <<< "$response")
-            echo "Status Code: $status_code"
-
             if [ $? -ne 0 ]; then
-                echo "Failed to execute gh api command"
+                echo "Failed to generate release note"
                 exit 1
             fi
 
             echo "Response: $response"
-            
-            status_code=$(echo "$response" | jq -r '.status_code')
-            if [ "$status_code" != "201" ]; then
-                echo "Failed to create release"
-                exit 1
-            fi
