--- a/.github/configs/labeler.yml
+++ b/.github/configs/labeler.yml
@@ -3,5 +3,9 @@ feature:
     - head-branch: ['^feature/', 'feat/']
 fix:
     - head-branch: ['^fix/']
+bug:
+    - head-branch: [ '^bug/' ]
 hotfix:
     - head-branch: ['^hotfix/']
+refactor:
+    - head-branch: [ '^refactor/' ]
