--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             /repos/${{ github.repository }}/releases/generate-notes \
             -f tag_name="${{ steps.release-tag.outputs.RELEASE_TAG }}" \
-            -f previous_tag_name="${{ steps.pre-tag.outputs.pre-tag }}" \
+            -f previous_tag_name="${{ steps.pre-tag.outputs.PRE_TAG }}" \
             -f target_commitish="main" \
             -f configuration_file_path=".github/release.yml" \
              | jq .body | sed 's/\\n/\n/g'
@@ -89,9 +89,9 @@ jobs:
         run: |
           RESPONSE=$(gh api \
             --method POST \
-            -f tag_name="${{ steps.release-tag.outputs.release-tag }}" \
+            -f tag_name="${{ steps.release-tag.outputs.RELEASE_TAG }}" \
             -f target_commitish="main" \
-            -f name="${{ steps.release-tag.outputs.release-tag }}" \
+            -f name="${{ steps.release-tag.outputs.RELEASE_TAG }}" \
             -f body="${{ steps.release-note-body.outputs.RELEASE_NOTE_BODY }}" \
             /repos/${{ github.repository }}/releases)
 
