--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,17 +53,17 @@ jobs:
             exit 1
           fi
           pr_body=$(gh pr view "$PR_NUMBER" --json body --jq '.body')
-          NOTION_LINK=$(echo "$pr_body" | grep -o 'https://www.notion.so/[a-zA-Z0-9?=/-]*')
+          notion_link=$(echo "$pr_body" | grep -o 'https://www.notion.so/[a-zA-Z0-9?=/-]*')
           if [ $? -ne 0 ]; then
             NOTION_LINK=""
           fi
-          echo "NOTION_LINK=$NOTION_LINK" >> $GITHUB_OUTPUT
+          echo "NOTION_LINK=$notion_link" >> $GITHUB_OUTPUT
 
       # 前回リリースからの差分をもとに、変更点を取得する
       - name: Generate release note changes
         id: changes
         run: |
-          echo "CHANGES=$(
+          CHANGES=$(
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
@@ -72,8 +72,12 @@ jobs:
             -f previous_tag_name="${{ steps.pre-tag.outputs.PRE_TAG }}" \
             -f target_commitish="main" \
             -f configuration_file_path=".github/release.yml" \
-             | jq -r .body
-          )" >> $GITHUB_OUTPUT
+             | jq -r .body)
+          {
+              echo "CHANGES<<EOF"
+              echo "$CHANGES"
+              echo "EOF"
+          } >> $GITHUB_OUTPUT
 
       # リリースノートの本文を作成する
       - name: Create release note body
