--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-            ref: ${{ env.BASE_BRANCH }}
+            ref: ${{ env.DEV_BRANCH }}
 
       - name: Reset promotion branch
         run: |
