--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-            ref: ${{ env.DEV_BRANCH }}
+            ref: ${{ env.BASE_BRANCH }}
 
       - name: Reset promotion branch
         run: |
@@ -30,5 +30,5 @@ jobs:
         id: create-pull-request
         uses: peter-evans/create-pull-request@v7
         with:
-          branch: ${{ env.BASE_BRANCH }}
+          branch: ${{ env.DEV_BRANCH }}
           title: Mainブランチにマージ
