--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -14,6 +14,8 @@ env:
 jobs:
   create_pr:
     runs-on: ubuntu-latest
+    permissions:
+        pull-requests: write
     steps:
       - uses: actions/checkout@master
         with:
