--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
           else
             release_note=""
           fi
-          echo "NOTION_LINK=$notion_link" >> $GITHUB_OUTPUT
+          echo "NOTION_LINK=$release_note" >> $GITHUB_OUTPUT
 
       # 前回リリースからの差分をもとに、変更点を取得する
       - name: Generate release note changes
