--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,8 +105,8 @@ jobs:
             const response = await github.rest.repos.generateReleaseNotes({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: ${{ steps.release-tag.outputs.RELEASE_TAG }},
-              previous_tag_name: ${{ steps.pre-tag.outputs.PRE_TAG }},
+              tag_name: "${{ steps.release-tag.outputs.RELEASE_TAG }}",
+              previous_tag_name: "${{ steps.pre-tag.outputs.PRE_TAG }}",
               target_commitish: "main",
               configuration_file_path: ".github/release.yml"
             });
@@ -122,8 +122,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const notionLink = ${{ steps.pr-body.outputs.NOTION_LINK }} || "";
-            const changes = ${{ steps.changes.outputs.CHANGES }} || "";
+            const notionLink = "${{ steps.pr-body.outputs.NOTION_LINK }}" || "";
+            const changes = "${{ steps.changes.outputs.CHANGES }}" || "";
 
             // NOTION_LINK と CHANGES を結合し、不要な文字を削除
             let releaseNoteBody = `${notionLink} ${changes}`.replace(/\\"/g, "").replace(/["“”]/g, "");
@@ -142,10 +142,10 @@ jobs:
               const response = await github.rest.repos.createRelease({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                tag_name: ${{ steps.release-tag.outputs.RELEASE_TAG }}, // RELEASE_TAGは前のステップで定義
+                tag_name: "${{ steps.release-tag.outputs.RELEASE_TAG }}", // RELEASE_TAGは前のステップで定義
                 target_commitish: "main",
-                name: ${{ steps.release-tag.outputs.RELEASE_TAG }}, // リリース名としてタグ名を使用
-                body: ${{ steps.release-note-body.outputs.RELEASE_NOTE_BODY }}, // リリースノート本文
+                name: "${{ steps.release-tag.outputs.RELEASE_TAG }}", // リリース名としてタグ名を使用
+                body: "${{ steps.release-note-body.outputs.RELEASE_NOTE_BODY }}", // リリースノート本文
               });
 
               // レスポンスを出力
