タイトル追加

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,8 +86,8 @@ jobs:
               pull_number: prNumber,
             });
 
-            const prBody = prDetails.data.body || "";
-
+            const prBody = "### リリースノート\n" + prDetails.data.body || "";
+            console.log(`prBody=${prBody}`);
             // Notionリンクを抽出
             const notionLink = prBody.match(/https:\/\/www\.notion\.so\/[a-zA-Z0-9?=\/-]*/)?.[0] || "";
 
