--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,10 +86,10 @@ jobs:
               pull_number: prNumber,
             });
 
-            const prBody = "### リリースノート\n" + prDetails.data.body || "";
-            console.log(`prBody=${prBody}`);
+            const prBody = prDetails.data.body || "";
+
             // Notionリンクを抽出
-            const notionLink = prBody.match(/https:\/\/www\.notion\.so\/[a-zA-Z0-9?=\/-]*/)?.[0] || "";
+            const notionLink = "### リリースノート\n" + prBody.match(/https:\/\/www\.notion\.so\/[a-zA-Z0-9?=\/-]*/)?.[0] || "";
 
             console.log(`NOTION_LINK=${notionLink}`);
             core.setOutput("NOTION_LINK", notionLink);
